--- a/Portfolio/1animation/animation.html
+++ b/Portfolio/1animation/animation.html
@@ -24,12 +24,12 @@
     <!-- ON EVERY PAGE -->
 
     <ul>
-        <li><a href="https://jwade05.github.io/Portfolio/index.html">Home</a></li>
-        <li><a href="https://jwade05.github.io/Portfolio/1graphic/graphic.html">Graphic Design</a></li>
-        <li><a class="active" href="https://jwade05.github.io/Portfolio/1animation/animation.html">Animation</a></li>
-        <li><a href="https://jwade05.github.io/Portfolio/1original/original.html">Original Work</a></li>
-        <li><a href="https://jwade05.github.io/Portfolio/1fan/fan.html">Fan Art</a></li>
-        <li><a href="https://jwade05.github.io/Portfolio/1fan/fan.html"></a></li>
+        <li><a href="https://jwade05.github.io/Portfolio/index.html"style="text-decoration:none">Home</a></li>
+        <li><a href="https://jwade05.github.io/Portfolio/1graphic/graphic.html"style="text-decoration:none">Graphic Design</a></li>
+        <li><a class="active" href="https://jwade05.github.io/Portfolio/1animation/animation.html"style="text-decoration:none">Animation</a></li>
+        <li><a href="https://jwade05.github.io/Portfolio/1original/original.html"style="text-decoration:none">Original Work</a></li>
+        <li><a href="https://jwade05.github.io/Portfolio/1fan/fan.html"style="text-decoration:none">Fan Art</a></li>
+        <li><a href="https://jwade05.github.io/Portfolio/1fan/fan.html"style="text-decoration:none"></a></li>
       </ul> 
   
     <body background="img/background.png">
