--- a/Portfolio/1animation/animation.html
+++ b/Portfolio/1animation/animation.html
@@ -49,17 +49,45 @@
         
     </div>
 
-    <div class="text">
-      <p>
-        <h2>Original Animations</h2>
-      </p>
+
+
+      <div class="row1">
+        <div class="column">
+          <iframe width="420" height="345" src="https://www.youtube.com/embed/g1ArHk_gMQ8"></iframe>
+        </div>
+        <div class="column">
+          <iframe  width="420" height="345" src="https://www.youtube.com/embed/VTlIQ1zwf5A"></iframe>
+        </div>
+
+
     </div>
 
-    <div class="text">
-      <p>
-       <h2>Fan Animations</h2> 
-      </p>
-    </div>
+
+
+
+
+        <div class="row1">
+          <div class="column">
+            <iframe width="420" height="345" src="https://www.youtube.com/embed/rgTTIRuD68o"></iframe>
+          </div>
+          <div class="column">
+            <iframe width="420" height="345" src="https://www.youtube.com/embed/laclAj5T4Qo"></iframe>
+          </div>
+        </div> 
+
+        <div class="row2">
+          <div class="column">
+            <iframe width="420" height="345" src="https://www.youtube.com/embed/uN4tKhMraPE"></iframe>
+          </div>         
+        </div>
+
     
+
+
+
+
+
+
+
   </body>
 </html>
