--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -104,7 +104,7 @@
 
 			<div class="col-lg-3 col-md-4 col-sm-6">
 				<div class="card h-100">
-            <a href="https://jwade05.github.io/Portfolio/fan/fan.html">
+            <a href="https://jwade05.github.io/Portfolio/1fan/fan.html">
               <img class="icon" src="img/row4.png"/>
             </a>
 					<div class="card-body">
