--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -42,7 +42,7 @@
     <div class="text">
 
       <p>
-      <img class="self" src="img/self.png"/>
+      <img class="self" src="img/self.jpg"/>
       <h2>About Me</h2>
       My name is Jason Wade. For as long as I can remember, I've always had an avid interest in technology; specifically its ability to communicate with people, 
       and especially in a visual medium. My main interests have always lied in animation and the arts, and as I began to work more in those 
